[package]
name = "example-tokio-uds-fd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tx"
path = "src/sender.rs"

[[bin]]
name = "rx"
path = "src/receiver.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
nix = { version = "0.29.0", features = ["socket", "uio", "fs", "net"] }
anyhow = "1"
ctrlc = "3.4"
clap = { version = "4", features = ["derive"] }
